# e3

./: .user.ini  README.md  composer.json  deploy.sh  error_log  index.php  workflow.xml
app/Http/Controllers/: ChallengesController.php  PagesController.php  SchemesController.php
benchmark-server/: api.cpp  app.php  perform-benchmark.php
benchmark-server-0.1/scheme/: scheme.cpp
benchmark-server-0.1/seal/: CMakeCache.txt  Makefile  scheme.cpp
benchmark-server-0.2/benchy/src/: encrypt.h  main.cpp
benchmark-server-0.3/benchy/: CMakeLists.txt
benchmark-server-0.3/benchy/src/: main.cpp  scheme-base.cpp  scheme-base.h
benchmark-server-0.4/benchy/src/: scheme-base.cpp
benchmark-server-0.5/benchy/: CMakeLists.txt
benchmark-server-0.5/benchy/src/: gate-api.cpp  gate-api.h  main.cpp  scheme-base.cpp  scheme-base.h
benchmark-server-0.6/benchy/: CMakeLists.txt
benchmark-server-0.6/benchy/scheme/: api-arithmetic-helib  api-arithmetic.cpp  api-gate.cpp  api.cpp
benchmark-server-0.6/benchy/src/: arithmetic.cpp  arithmetic.h  gate-api.cpp  gate-api.h  gate.cpp  main.cpp  scheme-base.cpp
benchmark-server-0.6/benchy/src/arithmetic/: arithmetic.h
benchmark-server-0.6/benchy/src/base/: scheme-base.h
benchmark-server/benchy/: CMakeLists.txt  benchmark_result.txt  benchy.py  cipherbit.h  circuit_benchmark.h  main.cpp  timer.cpp
benchmark-server/benchy/scheme/: api-arithmetic.cpp  api-gate.cpp  api-gate.cpp.tfhe  api-gate.oleg
benchmark-server/benchy/scheme/oleg/: a.out  oleg.h
benchmark-server/benchy/src/: benchmark.h  main.cpp  timer.h
benchmark-server/benchy/src/arithmetic/: arithmetic.cpp  arithmetic.h
benchmark-server/benchy/src/base/: base.cpp  base.h  scheme-base.cpp  scheme-base.h
benchmark-server/benchy/src/circuit/cpp_share/util/: def_mpir1.h  def_tfhe1.h
benchmark-server/benchy/src/circuits/: 4_bit.cpp  circuit.h
benchmark-server/benchy/src/gate/: gate.cpp  gate.h  gate_benchmark.h
benchmark-server/old-versions/benchmark-server-0.1/seal/: cmake_install.cmake  original.cpp
benchmark-server/old-versions/benchmark-server-0.1/tfhe/: Makefile  scheme.cpp
benchmark-server/old-versions/benchmark-server-0.3/benchy/: CMakeLists.txt
benchmark-server/old-versions/benchmark-server-0.3/benchy/src/: gate-api.h  main.cpp
benchmark-server/old-versions/benchmark-server-0.6.1 - Experimenting with auto return type/benchy/: CMakeLists.txt
benchmark-server/old-versions/benchmark-server-0.6.2 - Stopped using pointers/oleg/: key.cpp  main.cpp  oleg.cpp  oleg.h
benchmark-server/old-versions/benchmark-server/old-versions/benchmark-server-0.2/benchy/: CMakeLists.txt
benchmark-server/old-versions/benchmark-server/old-versions/benchmark-server-0.2/benchy/src/: benchy.h  decrypt.h
benchmark-server/old-versions/benchy-jr/: benchy-jr.cpp  benchy-jr.h
benchmark-server/oleg/: key.cpp  main.cpp  makefile  oleg.cpp  oleg.h
benchy/: Benchy.h  composer.json  perform-benchmark.php
benchy/scheme/: Benchy.h  Makefile  scheme.cpp
benchy/seal/: CMakeLists.txt  scheme.cpp
benchy/tfhe/: scheme.cpp
cache/repo/https---repo.packagist.org/: p-provider-2013.json  p-provider-2014.json  p-provider-2015.json  p-provider-2016.json  p-provider-2017.json  p-provider-2018-07.json  p-provider-2018-10.json  p-provider-2018.json  p-provider-2019-01.json  p-provider-2019-04.json  p-provider-archived.json  p-provider-latest.json  packages.json  provider-beyondcode$laravel-dump-server.json  provider-composer$xdebug-handler.json  provider-erusev$parsedown.json  provider-laravel$framework.json  provider-laravel$laravel.json  provider-laravelcollective$html.json  provider-league$flysystem.json  provider-nette$bootstrap.json  provider-nette$neon.json  provider-nette$php-generator.json  provider-nette$schema.json  provider-nunomaduro$collision.json  provider-opis$closure.json  provider-paragonie$random-compat.json  provider-phpstan$phpdoc-parser.json  provider-phpunit$php-code-coverage.json  provider-phpunit$php-timer.json  provider-phpunit$phpunit.json  provider-psr$container.json  provider-psr$log.json  provider-sebastian$object-reflector.json  provider-symfony$browser-kit.json  provider-symfony$cache-contracts.json  provider-symfony$config.json  provider-symfony$console.json  provider-symfony$contracts.json  provider-symfony$css-selector.json  (+23 more)
config/: app.php
database/migrations/: 2019_06_05_084611_create_schemes_table.php  2019_06_05_135017_create_challenges_table.php
resources/views/challenges/: create.blade.php
resources/views/layouts/: app.blade.php
resources/views/pages/: about.blade.php  faq.blade.php  index.blade.php  submitNewScheme.blade.php
resources/views/partials/: chart.blade.php  footer.blade.php  navbar.blade.php
resources/views/schemes/: create.blade.php  index.blade.php  show.blade.php
resources/views/solutions/: create.blade.php  show.blade.php
routes/: web.php
website/: .gitignore  .htaccess  css  img  index.php  js  robots.txt  storage  vendor  web.config
website/app/Http/Controllers/: ChallengesController.php  PagesController.php  SchemesController.php  SolutionsController.php
website/cache/repo/https---repo.packagist.org/: p-provider-2018-07.json  packages.json  provider-egulias$email-validator.json  provider-nesbot$carbon.json  provider-nette$di.json  provider-nette$finder.json  provider-nette$utils.json  provider-ocramius$package-versions.json  provider-phpstan$phpstan.json  provider-symfony$css-selector.json  provider-symfony$finder.json  provider-symfony$polyfill-php72.json  provider-symfony$polyfill-php73.json  provider-symfony$routing.json  provider-symfony$yaml.json
website/config/: app.php
website/database/migrations/: 2019_06_05_193947_create_solutions_table.php
website/laravel/: .htaccess  README.md  composer.json  error_log
website/laravel/app/: Benchmark.php  Benchmarks.php  Queue.php  User.php
website/laravel/config/: app.php
website/laravel/public/: error_log
website/laravel/routes/: web.php
website/oleg/: composer.json
website/oleg/oleg/: error_log
website/public/: error_log
(+106 files in other folders)
